# cloud_proc

./: CMakeLists.txt  mainpage.dox  manifest.xml
hdfutil/: Makefile
src/: alignment.cpp  alignment.h  interactive_segmentation.cpp  interactive_segmentation.h  interactive_segmentation_service.cpp  segmentation.cpp  segmentation.h  test_align_mugs.cpp  test_interactive_segmentation.cpp  test_segmentation.cpp  utils
